--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /public/storage
 /storage/*.key
 /vendor
-../../../Desktop/.env
+.env
 .env.backup
 .env.production
 .phpunit.result.cache
@@ -17,3 +17,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+docker-compose.yml
