--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "laravel/laravel",
-    "type": "../../../Desktop/project",
-    "description": "The ../../../Desktop/Laravel Framework.",
+    "type": "project",
+    "description": "The Laravel Framework.",
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
